[package]
name = "backlog-cli"
version = "0.3.0"
edition = "2024"
authors = ["Ed Anisko"]
description = "A simple, fast backlog manager for your git repos with an interactive TUI"
license = "MIT"
repository = "https://github.com/edanisko/backlog-cli"
homepage = "https://github.com/edanisko/backlog-cli"
readme = "README.md"
keywords = ["cli", "todo", "backlog", "tui", "productivity"]
categories = ["command-line-utilities"]

[[bin]]
name = "backlog"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
crossterm = "0.28"
ratatui = "0.29"
